[gd_scene load_steps=17 format=3 uid="uid://emts3i2ctj6k"]

[ext_resource type="Script" uid="uid://dnbpabuj0i8vq" path="res://Scripts/Player/player.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://dswpc3013cm7v" path="res://Scripts/Player/main.gd" id="1_0y7xl"]
[ext_resource type="Texture2D" uid="uid://ckbpbhjmrecvw" path="res://Spirtes/Player/github-octopuss.png" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dhxq4w6n0sj2s" path="res://Sences/bullet.tscn" id="2_ri208"]
[ext_resource type="PackedScene" uid="uid://cbodbww3t36n6" path="res://Sences/enemy.tscn" id="4_ipa3v"]
[ext_resource type="Script" uid="uid://8ekh8vnqvft8" path="res://Scripts/label.gd" id="6_5pjkp"]
[ext_resource type="Script" uid="uid://dxvfww423g1gx" path="res://Scripts/wave_label.gd" id="7_hxpnw"]
[ext_resource type="Script" uid="uid://bd0v8pvgf1gkn" path="res://Scripts/game_over_screen.gd" id="8_7pouu"]
[ext_resource type="FontFile" uid="uid://ydxs74l3u4gd" path="res://Fonts/PrStart.ttf" id="9_nkrox"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ig7tw"]
radius = 20.45
height = 50.67

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ljd"]
atlas = ExtResource("1_ig7tw")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcost"]
atlas = ExtResource("1_ig7tw")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxphk"]
atlas = ExtResource("1_ig7tw")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptnbv"]
atlas = ExtResource("1_ig7tw")
region = Rect2(50, 50, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_0jvq7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ljd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcost")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxphk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptnbv")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y7xl"]
size = Vector2(22.199997, 29.199997)

[node name="world" type="Node2D"]
scale = Vector2(5, 5)
script = ExtResource("1_0y7xl")
enemy_scene = ExtResource("4_ipa3v")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(113.00001, 61.799995)
up_direction = Vector2(0.99999446, -0.003333315)
script = ExtResource("1_0xm2m")
bullet = ExtResource("2_ri208")

[node name="PlayerColl" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_ig7tw")

[node name="PlayerAnim" type="AnimatedSprite2D" parent="Player"]
position = Vector2(-0.20001219, 1.0000062)
sprite_frames = SubResource("SpriteFrames_0jvq7")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.58340704

[node name="PlayerCam" type="Camera2D" parent="Player/PlayerAnim"]
zoom = Vector2(0.4, 0.4)

[node name="Enemy" parent="." instance=ExtResource("4_ipa3v")]
position = Vector2(30.400002, 56.199997)

[node name="EnemyArea" type="Area2D" parent="Enemy"]

[node name="EnemyColl" type="CollisionShape2D" parent="Enemy/EnemyArea"]
position = Vector2(-0.5, -0.79999924)
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_0y7xl")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HPLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("6_5pjkp")

[node name="WaveLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("7_hxpnw")

[node name="GameOverScreen" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_7pouu")

[node name="Background" type="ColorRect" parent="UI/GameOverScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0, 0, 1)

[node name="GameOverLabel" type="Label" parent="UI/GameOverScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("9_nkrox")
theme_override_font_sizes/font_size = 48
text = "GAME OVER!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverScreen"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "RESTART"

[node name="StatsLabel" type="Label" parent="UI/GameOverScreen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("9_nkrox")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[connection signal="body_entered" from="Enemy/EnemyArea" to="Enemy" method="_on_enemy_area_body_entered"]
[connection signal="pressed" from="UI/GameOverScreen/RestartButton" to="." method="_on_restart_button_pressed"]
